# mwizardtemplate

./: .clang-format  .gitignore  .gitlab-ci.qmake.yml  .gitlab-ci.yml  CMakeLists.template  CMakeLists.txt  Doxyfile.in  LICENSE.md  README.md  first-time-setup.cmake.template  mwizardtemplate.doxyfile  mwizardtemplate.doxyfile.in  org.milosolutions.app.json.template  qtbase.cmake  template.pro  version.cmake  version.pri
qml/: main.qml
src/: main.cpp
src/utils/: helpers.h  tags.h
template/: CMakeLists.txt  template.pro
template/src/: main.cpp
tests/: CMakeLists.txt  Readme-tests.md  tests.pro
tests/helpers/: helpers.cmake
tests/tst_project/: CMakeLists.txt  tst_project.pro  tst_template.cpp
tests/tst_utils_helpers/: CMakeLists.txt  tst_utils_helpers.cpp  tst_utils_helpers.pro
